--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,13 @@ body {
 
 .info {
     border: 2px solid black;
+    text-align: center;
+    margin-bottom: 1rem;
+    background-color: mistyrose;
+}
+
+.info > div{
+    margin: 0.5rem 0 0.5rem 0;
 }
 
 .data {
@@ -14,5 +21,193 @@ body {
 
 
 .icon-img {
-    max-height:10rem;
+    max-height:5rem;
+}
+.icon-img:hover {
+    transform: scale(1.1);
+}
+/* fix button */
+button {
+    display: inline-block;
+    padding: 0.5em 1.5em;
+    border: none;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    text-align: center;
+    transition: all 0.2s;
+    background-color: #FFFFFF;
+}   
+
+button:hover {
+    color: #000000;
+    background-color: #808080;
+}
+
+
+span {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-right: 0.5rem;
+}
+
+input {
+    font-size: 1rem;
+    margin-right: 0.25rem;
+    padding: 0.25rem;
+    border-radius: 0.25rem;
+    border: 1px solid black;
+    outline: none;
+    background-color: #FFF;
+    color: #000;
+    
+    box-shadow: 0 0 0 1px #000;
+    
+    &:focus {
+        box-shadow: 0 0 0 1px #000, 0 0 0 2px #808080;
+    }
+}
+
+#longitude, #latitude {
+    font-size: large;
+    text-align: center;
+    margin-right: 0.5rem;
+}
+
+#resolvedAddress {
+    font-size: xx-large;
+    text-align: center;
+}
+
+#timezone {
+    font-size: medium;
+    text-align: center;
+}
+
+#tzoffset {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.wind {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    gap: 1px;
+}
+
+span {
+    margin-right: 0;
+}
+
+.wind-arrow {
+    display: inline-block;  
+}
+
+svg{
+    /* transform-origin: 0.5em 10rem; */
+    width: fit-content;
+    height: fit-content;
+}
+
+#top {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0 1rem 0; 
+}
+
+#today {
+    display: flex;
+    gap: 1rem;
+}
+
+.temp {
+    font-size: 2.5rem;
+}
+
+.icon-temp {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 1rem;
+}
+
+.data {
+    display: flex;
+    gap: 4rem;
+    justify-content: center;
+}
+
+.data-main {
+    margin: 1rem;
+    text-wrap: nowrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.data-detail {
+    margin: 1rem;
+    display: flex;
+    gap: 2rem;
+}
+
+.data-detail > div > div{
+    margin: 1rem 0 1rem 0;
+}
+
+.data-detail > div > div > span{
+    margin: 1rem 0 1rem 0;
+    font-weight: 400;
+}
+
+.icon, .feelslike {
+    font-size: 1.5rem;
+    font-weight: lighter;
+}
+
+.windspeed {
+    font-weight: 500;
+}
+
+#daily {
+    text-wrap: nowrap;
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0 1rem 0;
+    gap: 5rem;
+    overflow: scroll;
+}
+
+#daily > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border: #808080 1px solid;
+    width: fit-content;
+    overflow: visible;
+    width: max-content;
+    padding: 1rem;
+    word-break: keep-all;
+}
+
+#daily > .days {
+    background-color: #ad5555;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#daily > div > div > .icon-temp > .temp {
+    font-size: 2rem;
+}
+
+#daily > div > div > .icon-temp > .icon-img {
+    /* width: 1rem; */
+    position: relative;
+    width: 4rem;
+    height: 4rem;
 }
