--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
 .info {
     border: 2px solid black;
     text-align: center;
-    margin-bottom: 1rem;
+    margin: 1rem;
     background-color: mistyrose;
 }
 
@@ -17,6 +17,8 @@ body {
 .data {
     border: 2px solid brown;
     background-color: #FFF;
+    margin: 1rem;
+    margin-bottom: 0rem;
 }
 
 
@@ -173,16 +175,16 @@ svg{
     font-weight: 500;
 }
 
-#daily {
+#daily-content {
     text-wrap: nowrap;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     margin: 1rem 0 1rem 0;
-    gap: 5rem;
+    gap: 1rem;
     overflow: scroll;
 }
 
-#daily > div {
+#daily-content > div {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -191,23 +193,64 @@ svg{
     overflow: visible;
     width: max-content;
     padding: 1rem;
-    word-break: keep-all;
 }
 
-#daily > .days {
-    background-color: #ad5555;
+#daily-content > .days {
+    background-color: lemonchiffon;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 1rem 0 1rem 0;
 }
 
-#daily > div > div > .icon-temp > .temp {
+#daily-content > div > div > .icon-temp > .temp {
     font-size: 2rem;
 }
 
-#daily > div > div > .icon-temp > .icon-img {
+#daily-content > div > div > .icon-temp > .icon-img {
     /* width: 1rem; */
     position: relative;
     width: 4rem;
     height: 4rem;
+}
+
+#daily {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* ::-webkit-scrollbar {
+    display: none;
+    background-color: transparent;
+    width: 10rem;
+    width: 0.1rem;
+    color: #000;
+} */
+
+#search {
+    margin-left: 2rem;
+}
+
+#today {
+    margin-right: 2rem;
+}
+
+@supports (scrollbar-color: red blue) {
+    * {
+        /* scrollbar-color: #808080 #FFFFFF; */
+        scrollbar-width: thin;
+        scroll-padding: -10rem;
+        scroll-behavior: smooth;
+        scrollbar-gutter: stable;
+        scroll-margin: -10rem 0 -10rem 0;
+    }
+}
+
+.day-name-content {
+    text-align: center;
+    align-content: center;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
 }
