--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,20 @@
 body {
-    background-color: antiquewhite;
+    background-color: #0F4C75;
 }
 
+/* #current {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+} */
 
 .info {
-    border: 2px solid black;
+    border: 5px solid #3282B8;
     text-align: center;
     margin: 1rem;
-    background-color: mistyrose;
+    background-color: #BBE1FA;
+    padding: 0.5rem;
 }
 
 .info > div{
@@ -15,10 +22,10 @@ body {
 }
 
 .data {
-    border: 2px solid brown;
-    background-color: #FFF;
+    border: 5px solid #3282B8;
     margin: 1rem;
     margin-bottom: 0rem;
+    background-color: #BBE1FA;
 }
 
 
@@ -64,7 +71,7 @@ input {
     border-radius: 0.25rem;
     border: 1px solid black;
     outline: none;
-    background-color: #FFF;
+    background-color: #BBE1FA;
     color: #000;
     
     box-shadow: 0 0 0 1px #000;
@@ -118,7 +125,20 @@ svg{
 #top {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 1rem 0 1rem 0; 
+}
+
+#top > div {
+    align-items: center;
+}
+
+#today > div > span {
+    color: #BBE1FA;
+}
+
+#search > span {
+    color: #BBE1FA;
 }
 
 #today {
@@ -139,8 +159,18 @@ svg{
 
 .data {
     display: flex;
-    gap: 4rem;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    gap: 0rem;
+}
+
+#data-content {
+    display: flex;
+    gap: 7rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .data-main {
@@ -188,7 +218,7 @@ svg{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    border: #808080 1px solid;
+    border: #BBE1FA 5px solid;
     width: fit-content;
     overflow: visible;
     width: max-content;
@@ -196,11 +226,12 @@ svg{
 }
 
 #daily-content > .days {
-    background-color: lemonchiffon;
+    background-color: #BBE1FA;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin: 1rem 0 1rem 0;
+    border: #0F4C75 3px solid;
 }
 
 #daily-content > div > div > .icon-temp > .temp {
@@ -218,6 +249,9 @@ svg{
     display: flex;
     justify-content: center;
     align-items: center;
+    border: #BBE1FA 5px solid;
+    margin: 1rem;
+    background-color: #3282B8;
 }
 
 /* ::-webkit-scrollbar {
@@ -233,6 +267,8 @@ svg{
 }
 
 #today {
+    display: flex;
+    justify-content: center;
     margin-right: 2rem;
 }
 
@@ -253,4 +289,81 @@ svg{
     display: flex;
     justify-content: center;
     margin-bottom: 1rem;
+}
+
+
+select {
+  width: 200px;
+  padding: 10px 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #333;
+  background-color: #BBE1FA;
+  cursor: pointer;
+  appearance: none; /* Remove default arrow */
+  background-image: linear-gradient(45deg, transparent 50%, gray 50%), linear-gradient(135deg, gray 50%, transparent 50%);
+  background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
+  background-repeat: no-repeat;
+}
+
+select:focus {
+  outline: none;
+  border-color: #aaa;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+select option {
+  background-color: #fff;
+  color: #333;
+  padding: 10px;
+}
+
+select option:hover {
+  background-color: #f0f0f0;
+  color: #333;
+}
+
+select option:checked {
+  background-color: #ddd;
+  color: #333;
+  background-image: linear-gradient(45deg, transparent 50%, #333 50%), linear-gradient(135deg, #333 50%, transparent 50%);
+  background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
+  background-repeat: no-repeat;
+}
+
+span {
+    color: #1B262C;
+    text-wrap: none;
+}
+
+.data-detail { display:none; }
+
+/* Desktop*/
+@media screen and (min-width: 768px) {
+
+    .data-detail  {     
+        margin: 1rem;
+        display: flex;
+        gap: 2rem; 
+    }
+
+    #data-content > button {
+        display: none;
+    }
+
+}
+
+#data-content.expanded {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+#expand {
+    background-color: #3282B8;
 }
